Overflow tooltip fix

--- a/gae-studio/src/main/resources/com/arcbees/gaestudio/client/resources/styles.css
+++ b/gae-studio/src/main/resources/com/arcbees/gaestudio/client/resources/styles.css
@@ -260,3 +260,7 @@ body, * {
 .pagerFix{
     padding-right: 1px;
 }
+
+.noOverflow{
+    overflow: visible;
+}
